--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 
 {
-    "name": "Sample PWA",
+    "name": "Lafarge PWA",
     "short_name" : "PWA",
     "start_url": "index.html",
     "scope" : "./",
     "icons": [
     {
-        "src": "photo.jpg",
-        "sizes": "250x250",
+        "src": "logo.png",
+        "sizes": "512x512",
         "type": "image/png"
     }
     ],
-    "theme_color": "#ffee00",
-    "background_color": "#ffee00",
+    "theme_color": "#005836",
+    "background_color": "#005836",
     "display": "standalone"
- }
+}
