--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,12 @@
     "scope" : "./",
     "icons": [
     {
-        "src": "logo.png",
-        "sizes": "512x512",
+        "src": "l1.png",
+        "sizes": "225x225",
         "type": "image/png"
     }
     ],
-    "theme_color": "#005836",
-    "background_color": "#005836",
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
     "display": "standalone"
 }
